# revio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  turbo.json  vercel.json
.github/: labeler.yml
.github/workflows/: ci.yml  deploy.yml  pr.yml
0a/50564850c9/: metadata.json
42/82f9afea04/: metadata.json
88/324c1ee2e4/: metadata.json
apps/api/: .dockerignore  .env.example  AGENTS.md  Dockerfile  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 399f0d9c8108_add_resume_and_chat_models.py
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  auth.py  chat.py  health.py  livekit.py  memory.py  resumes.py
apps/api/app/core/: auth.py  config.py  database.py  logging.py
apps/api/app/models/: __init__.py  chat_session.py  example.py  resume.py
apps/api/app/schemas/: __init__.py  auth.py  chat.py  health.py  memory.py  resume.py
apps/api/app/scripts/: export_openapi.py  run_livekit_agent.py
apps/api/app/services/: file_parser.py  gemini.py  livekit_agent.py  memory.py  openai_service.py  prompts.py  resume_processor.py  resume_search.py
apps/api/tests/: conftest.py
apps/web/: .dockerignore  AGENTS.md  Dockerfile  next.config.ts  package.json  vercel.json
c8/5f22988ff2/: metadata.json
docs/: architecture.md  backend.md  docker.md  environment.md  frontend.md  memory.md
rules/: generate_prd.md  generate_tasks.md  task_list_management.md
skills/: SKILLS_REGISTRY.md
skills/checkpoint/: run.sh  (+2 more)
(+69 files in other folders)
